--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
   </div>
 </div>
 <!-- partial -->
+  <script src="https://cdn.jsdelivr.net/npm/mathjs@11/lib/browser/math.js"></script>
+
   <script  src="./script.js"></script>
 
 </body>
